doc/logfile.txt
Class documentation
<---- javadoc command: ---->
javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/app/bluej/lib/bluejcore.jar:/app/bluej/lib/junit-4.11.jar:/app/bluej/lib/hamcrest-core-1.3.jar:/app/bluej/lib/lang-stride.jar:/app/bluej/lib/javafx/lib/javafx.base.jar:/app/bluej/lib/javafx/lib/javafx.controls.jar:/app/bluej/lib/javafx/lib/javafx.fxml.jar:/app/bluej/lib/javafx/lib/javafx.graphics.jar:/app/bluej/lib/javafx/lib/javafx.media.jar:/app/bluej/lib/javafx/lib/javafx.properties.jar:/app/bluej/lib/javafx/lib/javafx.swing.jar:/app/bluej/lib/javafx/lib/javafx.web.jar:/home/ryan/Documents/Project/Bible Code
-d
/home/ryan/Documents/Project/Bible Code/doc
-encoding
UTF-8
-charset
UTF-8
/home/ryan/Documents/Project/Bible Code/In_to_one_string.java
<---- end of javadoc command ---->
Loading source file /home/ryan/Documents/Project/Bible Code/In_to_one_string.java...
/home/ryan/Documents/Project/Bible Code/In_to_one_string.java:10: error: <identifier> expected
        start.
              ^
/home/ryan/Documents/Project/Bible Code/In_to_one_string.java:10: error: not a statement
        start.
             ^
2 errors
